get rid of 1.5 method